kuber/postgres_stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres-statefulset
spec:
    serviceName: "postgres"
    replicas: 1
    selector:
      matchLabels:
        app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
            - name: postgres
              image: postgres:latest
              imagePullPolicy: "IfNotPresent"
              ports:
              - containerPort: 5432
                name: postgresdb
                protocol: TCP
