kuber/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-storage-service
spec:
  selector:
    app: user-storage-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: user-web
  type: LoadBalancer
