kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-storage-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: user-storage-service
                port:
                  number: 8080
